--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ img {
   --title-font-size: 1.875rem;
   --subtitle-font-size: 1rem;
 
-  --title-font: 'Poppins', sans-serif;
-  --body-font: 'DM Sans', sans-serif;
+  --title-font: "Poppins", sans-serif;
+  --body-font: "DM Sans", sans-serif;
 }
 
 /*===  BASE ============================ */
@@ -179,7 +179,7 @@ nav ul li a.active {
 }
 
 nav ul li a::after {
-  content: '';
+  content: "";
   width: 0%;
   height: 2px;
   background: var(--base-color);
@@ -260,10 +260,16 @@ nav.show div.icon-close {
 /*====  HOME ============================ */
 #home {
   overflow: hidden;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 #home .container {
   margin: 0;
+  align-items: center;
+  width: 400px;
+  margin-bottom: 20px;
 }
 
 #home .image {
@@ -271,7 +277,7 @@ nav.show div.icon-close {
 }
 
 #home .image::before {
-  content: '';
+  content: "";
   height: 100%;
   width: 100%;
   background: var(--base-color-second);
@@ -286,11 +292,9 @@ nav.show div.icon-close {
   right: 2.93rem;
 }
 
-
-
 #home .text {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  /* margin-left: 1.5rem;
+  margin-right: 1.5rem; */
   text-align: center;
 }
 
@@ -301,7 +305,6 @@ nav.show div.icon-close {
 #home .text p {
   margin-bottom: 2rem;
 }
-
 
 /*====  ABOUT ============================ */
 #about {
@@ -317,7 +320,7 @@ nav.show div.icon-close {
 }
 
 #about .image::before {
-  content: '';
+  content: "";
   height: 100%;
   width: 100%;
   background: var(--base-color-second);
@@ -526,6 +529,10 @@ footer .social a:hover {
   transform: translateY(0);
 }
 
+.infos {
+  padding: 20px;
+}
+
 /*========= MEDIA QUERIES =========*/
 /* extra large devices: 1200 > */
 @media (min-width: 1200px) {
@@ -620,10 +627,7 @@ footer .social a:hover {
   #testimonials .container {
     margin-left: auto;
     margin-right: auto;
-    
   }
-
-  
 
   /* footer */
   footer.section {
